# Game-Theory

./: LICENSE  README.md  config.json  main.py  pyproject.toml
config_parsing/: __init__.py
game_theory/: README.md  __init__.py  gt.py
game_theory/payoff_matrix/: __init__.py
game_theory/player/: __init__.py  player_factory.py
game_theory/player/always_defect_player/: __init__.py
game_theory/player/always_forgive_player/: __init__.py
game_theory/player/pavlov_player/: __init__.py
game_theory/player/random_player/: __init__.py
game_theory/player/tit_tat_player/: __init__.py
game_theory/player/unforgiving_player/: __init__.py
game_theory/utils/: __init__.py
