[tool.poetry]
name = "game-theory"
version = "0.1.0"
description = ""
authors = ["Eloy Gustavo Ye Luo <eloiiiig@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
